<resources>
    <string name="app_name">MAD: Level 7 - Example</string>

    <string name="fragment_label_home">Home Fragment</string>
    <string name="label_instructions">Welcome to the Quiz Maker. Please create a question before starting the quiz.</string>
    <string name="btn_label_create_quiz">create quiz</string>
    <string name="btn_label_start_quiz">start quiz</string>

    <string name="fragment_label_create_quiz">Create Quiz Fragment</string>
    <string name="label_create_quiz_instructions">Create your quiz here</string>
    <string name="input_placeholder_question">Question</string>
    <string name="input_placeholder_answer">Answer</string>
    <string name="btn_label_create_question">create</string>

    <string name="fragment_label_quiz">Quiz Fragment</string>
    <string name="notification_quiz_creation_success">Quiz was sucessfully created</string>
    <string name="label_quiz_question" />
    <string name="btn_answer">confirm answer</string>
</resources>
